src/test/deca/codegen/valid/objet/ReturnMethode.deca
// Description :
//    Test génération de code selection sur un Identifier + Return 
//
// Resultats decac:
// Resultat ima: 1

// PLUTOT OK

class A{
    
    int x = 1;

    int getX(){
        return x;
    }
}
{
    A a = new A();
    print(a.getX());
    
}
